@@ -584,6 +584,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
     setCallInProgressNotification(TYPE_ESTABLISHED, recipient);
 
+    this.peerConnection.setCommunicationMode();
     this.peerConnection.setAudioEnabled(microphoneEnabled);
     this.peerConnection.setVideoEnabled(localVideoEnabled);
 
@@ -671,8 +672,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
 
   private void insertMissedCall(@NonNull Recipient recipient, boolean signal) {
     Pair<Long, Long> messageAndThreadId = DatabaseFactory.getSmsDatabase(this).insertMissedCall(recipient.getAddress());
-    MessageNotifier.updateNotification(this, KeyCachingService.getMasterSecret(this),
-                                       messageAndThreadId.second, signal);
+    MessageNotifier.updateNotification(this, messageAndThreadId.second, signal);
   }
 
   private void handleAnswerCall(Intent intent) {
@@ -1044,7 +1044,7 @@ public class WebRtcCallService extends Service implements InjectableType, PeerCo
     }
 
     if (stream.videoTracks != null && stream.videoTracks.size() == 1) {
-      VideoTrack videoTrack = stream.videoTracks.getFirst();
+      VideoTrack videoTrack = stream.videoTracks.get(0);
       videoTrack.setEnabled(true);
       videoTrack.addRenderer(new VideoRenderer(remoteRenderer));
     }
